testdata/baselines/reference/submodule/compiler/unusedTypeParametersCheckedByNoUnusedParameters.errors.txt
unusedTypeParametersCheckedByNoUnusedParameters.ts(1,12): error TS6196: 'T' is declared but never used.
unusedTypeParametersCheckedByNoUnusedParameters.ts(3,8): error TS6196: 'T' is declared but never used.
unusedTypeParametersCheckedByNoUnusedParameters.ts(5,13): error TS6196: 'T' is declared but never used.
unusedTypeParametersCheckedByNoUnusedParameters.ts(7,9): error TS6196: 'T' is declared but never used.
unusedTypeParametersCheckedByNoUnusedParameters.ts(8,14): error TS6196: 'V' is declared but never used.
unusedTypeParametersCheckedByNoUnusedParameters.ts(11,10): error TS6196: 'T' is declared but never used.


==== unusedTypeParametersCheckedByNoUnusedParameters.ts (6 errors) ====
    function f<T>() { }
               ~
!!! error TS6196: 'T' is declared but never used.
    
    type T<T> = { };
           ~
!!! error TS6196: 'T' is declared but never used.
    
    interface I<T> { };
                ~
!!! error TS6196: 'T' is declared but never used.
    
    class C<T> {
            ~
!!! error TS6196: 'T' is declared but never used.
        public m<V>() { }
                 ~
!!! error TS6196: 'V' is declared but never used.
    };
    
    let l = <T>() => { };
             ~
!!! error TS6196: 'T' is declared but never used.
    